syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.springframework.grpc.sample.proto";
option java_outer_classname = "PingPongProto";

service PingPongService {
    rpc SayPong(PingRequest) returns (PongReply) {}
}

message PingRequest {
    string name = 1;
}

message PongReply {
    string message = 1;
}